--- a/MoscowCity.v.1/Kontur.csproj
+++ b/MoscowCity.v.1/Kontur.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FrmEditOplata.Designer.cs">
       <DependentUpon>FrmEditOplata.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPictureOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPictureOrder.Designer.cs">
+      <DependentUpon>FrmPictureOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Firma.cs" />
     <Compile Include="Models\Bank.cs" />
     <Compile Include="Models\Naznachenie.cs" />
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEditOplata.resx">
       <DependentUpon>FrmEditOplata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPictureOrder.resx">
+      <DependentUpon>FrmPictureOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
