--- a/WebService.v.1/WebService.v.1.csproj
+++ b/WebService.v.1/WebService.v.1.csproj
@@ -169,12 +169,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\BalancesController.cs" />
     <Compile Include="Controllers\ContraController.cs" />
     <Compile Include="Controllers\FirmaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\NaznachController.cs" />
     <Compile Include="Controllers\NewOplaController.cs" />
+    <Compile Include="Controllers\PicorController.cs" />
     <Compile Include="Controllers\PosrController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
