--- a/WebService.v.1/WebService.v.1.csproj
+++ b/WebService.v.1/WebService.v.1.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\FirmaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MashinosyController.cs" />
     <Compile Include="Controllers\NaznachController.cs" />
     <Compile Include="Controllers\NewOplaController.cs" />
     <Compile Include="Controllers\OperationsController.cs" />
