--- a/Frut1Cv2/Frut1Cv2.csproj
+++ b/Frut1Cv2/Frut1Cv2.csproj
@@ -7,12 +7,12 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
 	
-	  <Company>UltraZoom</Company>
-	  <Copyright>UltraZoom@2022</Copyright>
+	  <Company>UltraZoom, LLC</Company>
+	  <Copyright>Mizer@2022</Copyright>
 	  <Description>Frut Server 1C loader</Description>
-	  <Product>Frut Server by Mizer</Product>
+	  <Product>Frut Server 1C 010622</Product>
 	  <AssemblyTitle>Frut Server</AssemblyTitle>
-	  <Version>1.0.0.6</Version>
+	  <Version>1.0.0.8</Version>
 	  
   </PropertyGroup>
 
